refactor: improve code quality and enhance Javadoc documentation
Code Quality Improvements:
- GameSettings: Add return value check for File.mkdirs() to handle directory creation failures
- GameMode: Remove unused import (Board) and unused render() method from interface
- GameModeType: Remove unused fields (displayName, description) and methods (getDisplayName, getDescription, getModeCount)
- GameModeFactory: Remove unused methods (createGameMode with single parameter, getAvailableGameModes, isGameModeSupported, getGameModeDisplayName, getGameModeDescription)
- LevelGameModeImpl:
  * Make currentLevelMode field final (immutable after construction)
  * Remove unused stars variable calculation
  * Remove unused reason parameter from failLevel() method
  * Remove unused getTimeRemainingSeconds() private method
  * Remove unused render() method implementation
  * Update enum value reference from get(0) to getFirst() for clarity

Javadoc Enhancements:
- GameSettings: Expand class documentation with detailed description of Singleton pattern, settings persistence, and file location. Improve method documentation clarity.
- GameMode: Enhance interface documentation with detailed explanation of Strategy pattern, responsibilities, and delegation relationships. Add comprehensive method documentation.
- GameModeType: Add detailed enum documentation explaining each game mode type and their purposes.
- GameModeFactory: Expand factory documentation with detailed creation logic for each mode type, parameter constraints, and exception handling.
- LevelGameModeImpl: Enhance class documentation with detailed state management, responsibilities, and delegation patterns. Improve all method documentation including private methods.

Documentation Style:
- Remove excessive {@link} tags for better readability (keep only essential cross-package references)
- Use natural language flow instead of over-linking within same package
- Add comprehensive parameter and return value descriptions
- Includ