@@ -7,9 +7,16 @@ import com.comp2042.model.mode.LevelManager;
 import com.comp2042.model.mode.TwoPlayerMode;
 
 /**
- * Factory class for creating game mode instances.
- * This class implements the Factory pattern to create appropriate game mode
- * implementations based on the requested game mode type.
+ * Factory class for instantiating game mode implementations.
+ * Implements the Factory pattern to encapsulate the creation logic and provide
+ * a centralized point for game mode instantiation based on the requested type.
+ * 
+ * <p>This factory handles the creation of three game mode types:
+ * <ul>
+ *   <li>ENDLESS: Creates EndlessMode</li>
+ *   <li>LEVEL: Creates LevelGameModeImpl with level configuration</li>
+ *   <li>TWO_PLAYER_VS: Creates TwoPlayerMode with dual game services</li>
+ * </ul>
  * 
  * @author Dong, Jia.
  */
@@ -17,27 +24,30 @@ public class GameModeFactory {
 
     /**
      * Creates a new game mode instance based on the specified type.
-     * @param type the type of game mode to create
-     * @param gameService the game service to use
-     * @param guiController the GUI controller to use
-     * @return a new game mode instance
+     * 
+     * <p>For LEVEL mode, automatically retrieves the first available level from
+     * LevelManager. For TWO_PLAYER_VS mode, creates separate game services and boards
+     * for both players.
+     * 
+     * @param type the type of game mode to create, must not be null
+     * @param gameService the game service instance for single-player modes (null for TWO_PLAYER_VS)
+     * @param guiController the GUI controller for UI updates, must not be null
+     * @return a new game mode instance implementing the requested mode
      * @throws IllegalArgumentException if the game mode type is not supported
+     * @throws IllegalStateException if LEVEL mode is requested but no levels are available
      */
     public static GameMode createGameMode(GameModeType type, GameService gameService, GuiController guiController) {
         switch (type) {
             case ENDLESS:
                 return new EndlessMode(gameService, guiController);
             case LEVEL:
-                // Get the first available level for now
                 LevelManager levelManager = LevelManager.getInstance();
                 var availableLevels = levelManager.getAllLevels();
                 if (availableLevels.isEmpty()) {
                     throw new IllegalStateException("No levels available");
                 }
-                return new LevelGameModeImpl(gameService, guiController, levelManager, availableLevels.get(0));
+                return new LevelGameModeImpl(gameService, guiController, levelManager, availableLevels.getFirst());
             case TWO_PLAYER_VS:
-                // Create two separate game services for VS mode
-                // Use dependency injection: create Board instances explicitly and inject them
                 com.comp2042.model.board.Board player1Board = new com.comp2042.model.board.SimpleBoard(10, 20);
                 com.comp2042.model.board.Board player2Board = new com.comp2042.model.board.SimpleBoard(10, 20);
                 GameService player1Service = new com.comp2042.service.gameloop.GameServiceImpl(player1Board);
@@ -46,50 +56,5 @@ public class GameModeFactory {
             default:
                 throw new IllegalArgumentException("Unknown game mode type: " + type);
         }
-    }
-
-    /**
-     * Creates a game mode with default configuration.
-     * @param type the type of game mode to create
-     * @return a new game mode instance with default configuration
-     */
-    public static GameMode createGameMode(GameModeType type) {
-        // This method will be implemented when we have default configurations
-        throw new UnsupportedOperationException("Default game mode creation not yet implemented");
-    }
-
-    /**
-     * Gets all available game mode types.
-     * @return an array of all game mode types
-     */
-    public static GameModeType[] getAvailableGameModes() {
-        return GameModeType.values();
-    }
-
-    /**
-     * Checks if a game mode type is supported.
-     * @param type the game mode type to check
-     * @return true if the type is supported, false otherwise
-     */
-    public static boolean isGameModeSupported(GameModeType type) {
-        return type != null;
-    }
-
-    /**
-     * Gets the display name for a game mode type.
-     * @param type the game mode type
-     * @return the display name
-     */
-    public static String getGameModeDisplayName(GameModeType type) {
-        return type != null ? type.getDisplayName() : "Unknown Mode";
-    }
-
-    /**
-     * Gets the description for a game mode type.
-     * @param type the game mode type
-     * @return the description
-     */
-    public static String getGameModeDescription(GameModeType type) {
-        return type != null ? type.getDescription() : "No description available";
     }
 }
